Agregada autenticación JWT
